<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Home screen. -->
    <string name="cart_title">Cart</string>
    <string name="fav_title">Favorites</string>
    <string name="user_title">User</string>
    <string name="location">Warsaw, Poland</string>
    <string name="explorer_text">Explorer</string>
    <string name="see_more_text">see more</string>
    <string name="select_category_text">Select Category</string>
    <string name="view_all_text">view all</string>
    <string name="phones_text">Phones</string>
    <string name="computers_text">Computers</string>
    <string name="health_text">Health</string>
    <string name="books_text">Books</string>
    <string name="search_hint">Search</string>
    <string name="hot_sales_text">Hot Sales</string>
    <string name="best_sellers_text">Best Sellers</string>
    <string name="filter_title">Filter</string>
    <string name="new_item">New</string>
    <string name="buy_now_text">Buy now!</string>

    <!-- Map screen.-->
    <string name="appbar_map_text">Store Location</string>
    <string name="location_disabled_text">Location is disabled.\nPlease enable location in settings</string>
    <string name="location_denied_text">Can\'t get location.\nEnable permissions in app settings</string>

    <!-- Filter screen. -->
    <string name="btn_done">Done</string>
    <string name="filter_header">Filter options</string>
    <string name="filter_brand">Brand</string>
    <string name="filter_size">Size</string>
    <string name="filter_price">Price</string>

    <string-array name="brands">
        <item>Samsung</item>
        <item>Apple</item>
        <item>Xiaomi</item>
        <item>Motorola</item>
        <item>Poco</item>
        <item>One Plus</item>
    </string-array>

    <string-array name="prices">
        <item>$0 – $200</item>
        <item>$200 – $500</item>
        <item>$500 – $1000</item>
        <item>$1000 – $5000</item>
        <item>$5000 – $10000</item>
    </string-array>

    <string-array name="sizes">
        <item>4.5 – 5.5 inches</item>
        <item>5.5 – 6.0 inches</item>
        <item>6.0 – 6.3 inches</item>
        <item>6.3 – 6.5 inches</item>
        <item>6.5 – 6.8 inches</item>
    </string-array>

</resources>