<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/filter_height">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/filter_bg"
        android:minHeight="@dimen/filter_height">

        <Button
            android:id="@+id/btn_filter_done"
            style="@style/FilterDoneButtonStyle"
            android:layout_width="@dimen/btn_done_width"
            android:layout_height="@dimen/image_button"
            android:layout_marginEnd="24dp"
            android:background="@drawable/square_orange_bg"
            android:text="@string/btn_done"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btn_filter_close"
            tools:ignore="TouchTargetSizeCheck" />

        <ImageButton
            android:id="@+id/btn_filter_close"
            style="@style/FilterCancelButtonStyle"
            android:layout_width="@dimen/image_button"
            android:layout_height="@dimen/image_button"
            android:layout_marginStart="@dimen/filter_button_margin"
            android:layout_marginTop="24dp"
            android:background="@drawable/square_blue_bg"
            android:src="@drawable/ic_cross"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_header"
            android:textColor="@color/dark_blue"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/btn_filter_done"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btn_filter_done" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/filter_brand"
            android:textColor="@color/dark_blue"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/btn_filter_close"
            app:layout_constraintTop_toBottomOf="@+id/btn_filter_close" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/filter_price"
            android:textColor="@color/dark_blue"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/spinner_brand" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/filter_size"
            android:textColor="@color/dark_blue"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/spinner_price" />

        <Spinner
            android:id="@+id/spinner_brand"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/spinner_bg"
            android:entries="@array/brands"
            android:gravity="center_vertical"
            android:paddingStart="16dp"
            android:popupBackground="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/btn_filter_done"
            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            tools:ignore="RtlSymmetry,TouchTargetSizeCheck" />

        <Spinner
            android:id="@+id/spinner_price"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/spinner_bg"
            android:entries="@array/prices"
            android:gravity="center_vertical"
            android:paddingStart="16dp"
            android:popupBackground="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/spinner_brand"
            app:layout_constraintStart_toStartOf="@+id/spinner_brand"
            app:layout_constraintTop_toBottomOf="@+id/textView13"
            tools:ignore="RtlSymmetry,TouchTargetSizeCheck" />

        <Spinner
            android:id="@+id/spinner_size"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/spinner_bg"
            android:entries="@array/sizes"
            android:gravity="center_vertical"
            android:paddingStart="16dp"
            android:popupBackground="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/spinner_price"
            app:layout_constraintStart_toStartOf="@+id/spinner_brand"
            app:layout_constraintTop_toBottomOf="@+id/textView14"
            tools:ignore="RtlSymmetry,TouchTargetSizeCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>